--- a/security1/src/main/resources/templates/loginForm.html
+++ b/security1/src/main/resources/templates/loginForm.html
@@ -1,6 +1,6 @@
 <h1>로그인 페이지</h1>
 
-<form>
+<form action="/login">
 	<input type="text" name="username" placeholder="Username"/><br/>
 	<input type="password"" name="password" placeholder="Password"/><br/>
 	
