--- a/security1/src/main/resources/templates/loginForm.html
+++ b/security1/src/main/resources/templates/loginForm.html
@@ -7,4 +7,5 @@
 	<button>로그인</button>
 </form>
 
-<a href="/joinForm">회원가입을 아직 하지 않으셨나요?</a>
+<a href="/oauth2/authorization/google">구글 로그인</a>
+<a href="/joinForm">회원가입을 아직 하지 않으셨나요?</a>  
