--- a/security1/src/main/resources/templates/loginForm.html
+++ b/security1/src/main/resources/templates/loginForm.html
@@ -8,4 +8,5 @@
 </form>
 
 <a href="/oauth2/authorization/google">구글 로그인</a>
+<a href="/oauth2/authorization/fackbook">구글 로그인</a>
 <a href="/joinForm">회원가입을 아직 하지 않으셨나요?</a>  
