--- a/security1/src/main/resources/templates/joinForm.html
+++ b/security1/src/main/resources/templates/joinForm.html
@@ -6,5 +6,6 @@
 	<input type="email" name="email" placeholder="Email"/> <br/>
 	
 	<button>회원가입</button>
+	<a href="/joinForm">회원가입을 하지 않으셨나요? </a>
 </form>
 
