--- a/security/src/main/resources/templates/loginForm.html
+++ b/security/src/main/resources/templates/loginForm.html
@@ -1,9 +1,10 @@
 <h1>로그인 페이지</h1>
 
-<form>
-<input type="input" name="username" placeholder="username"><br/>
+<form action="/login" method="POST">
+<input type="text" name="username" placeholder="username"><br/>
 <input type="password" name="password" placeholder="password"><br/>
 
 <button>로그인</button>
+<a href="/joinForm">회원가입을 아직 하지 않으셨나요?</a>
 
 </form>
