--- a/demo4/src/main/resources/templates/home.html
+++ b/demo4/src/main/resources/templates/home.html
@@ -11,11 +11,13 @@
  <div class="jumbotron">
  <h1>자리톡 커뮤니티</h1>
  <p class="lead">회원 기능</p>
+ 
  <p>
- <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
- <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a>
-  <a class="btn btn-lg btn-secondary" href="/members">글쓰기</a>
+ <a class="btn btn-lg btn-secondary" href="/join">회원 가입</a>
+ <a class="btn btn-lg btn-secondary" href="/list">회원 목록</a>
+  <a class="btn btn-lg btn-secondary" href="/write">글쓰기</a>
  </p>
+
 
  </div>
 <!-- <div th:replace="fragments/footer :: footer" />-->
